# swagger/swagger.yml
@@ -126,121 +126,6 @@ paths:
           description: '{string} delete success!'
         "404":
           description: not found resource
-  /institucion_enfasis/:
-    get:
-      tags:
-      - institucion_enfasis
-      description: get InstitucionEnfasis
-      operationId: InstitucionEnfasisController.Get All
-      parameters:
-      - in: query
-        name: query
-        description: Filter. e.g. col1:v1,col2:v2 ...
-        type: string
-      - in: query
-        name: fields
-        description: Fields returned. e.g. col1,col2 ...
-        type: string
-      - in: query
-        name: sortby
-        description: Sorted-by fields. e.g. col1,col2 ...
-        type: string
-      - in: query
-        name: order
-        description: Order corresponding to each sortby field, if single value, apply
-          to all sortby fields. e.g. desc,asc ...
-        type: string
-      - in: query
-        name: limit
-        description: Limit the size of result set. Must be an integer
-        type: string
-      - in: query
-        name: offset
-        description: Start position of result set. Must be an integer
-        type: string
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.InstitucionEnfasis'
-        "404":
-          description: not found resource
-    post:
-      tags:
-      - institucion_enfasis
-      description: create InstitucionEnfasis
-      operationId: InstitucionEnfasisController.Post
-      parameters:
-      - in: body
-        name: body
-        description: body for InstitucionEnfasis content
-        required: true
-        schema:
-          $ref: '#/definitions/models.InstitucionEnfasis'
-      responses:
-        "201":
-          description: '{int} models.InstitucionEnfasis'
-        "400":
-          description: the request contains incorrect syntax
-  /institucion_enfasis/{id}:
-    get:
-      tags:
-      - institucion_enfasis
-      description: get InstitucionEnfasis by id
-      operationId: InstitucionEnfasisController.Get One
-      parameters:
-      - in: path
-        name: id
-        description: The key for staticblock
-        required: true
-        type: string
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.InstitucionEnfasis'
-        "404":
-          description: not found resource
-    put:
-      tags:
-      - institucion_enfasis
-      description: update the InstitucionEnfasis
-      operationId: InstitucionEnfasisController.Put
-      parameters:
-      - in: path
-        name: id
-        description: The id you want to update
-        required: true
-        type: string
-      - in: body
-        name: body
-        description: body for InstitucionEnfasis content
-        required: true
-        schema:
-          $ref: '#/definitions/models.InstitucionEnfasis'
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.InstitucionEnfasis'
-        "400":
-          description: the request contains incorrect syntax
-    delete:
-      tags:
-      - institucion_enfasis
-      description: delete the InstitucionEnfasis
-      operationId: InstitucionEnfasisController.Delete
-      parameters:
-      - in: path
-        name: id
-        description: The id you want to delete
-        required: true
-        type: string
-      responses:
-        "200":
-          description: '{string} delete success!'
-        "404":
-          description: not found resource
   /metodologia/:
     get:
       tags:
@@ -460,6 +345,121 @@ paths:
       - nivel_formacion
       description: delete the NivelFormacion
       operationId: NivelFormacionController.Delete
+      parameters:
+      - in: path
+        name: id
+        description: The id you want to delete
+        required: true
+        type: string
+      responses:
+        "200":
+          description: '{string} delete success!'
+        "404":
+          description: not found resource
+  /proyecto_academico_enfasis/:
+    get:
+      tags:
+      - proyecto_academico_enfasis
+      description: get ProyectoAcademicoEnfasis
+      operationId: ProyectoAcademicoEnfasisController.Get All
+      parameters:
+      - in: query
+        name: query
+        description: Filter. e.g. col1:v1,col2:v2 ...
+        type: string
+      - in: query
+        name: fields
+        description: Fields returned. e.g. col1,col2 ...
+        type: string
+      - in: query
+        name: sortby
+        description: Sorted-by fields. e.g. col1,col2 ...
+        type: string
+      - in: query
+        name: order
+        description: Order corresponding to each sortby field, if single value, apply
+          to all sortby fields. e.g. desc,asc ...
+        type: string
+      - in: query
+        name: limit
+        description: Limit the size of result set. Must be an integer
+        type: string
+      - in: query
+        name: offset
+        description: Start position of result set. Must be an integer
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.ProyectoAcademicoEnfasis'
+        "404":
+          description: not found resource
+    post:
+      tags:
+      - proyecto_academico_enfasis
+      description: create ProyectoAcademicoEnfasis
+      operationId: ProyectoAcademicoEnfasisController.Post
+      parameters:
+      - in: body
+        name: body
+        description: body for ProyectoAcademicoEnfasis content
+        required: true
+        schema:
+          $ref: '#/definitions/models.ProyectoAcademicoEnfasis'
+      responses:
+        "201":
+          description: '{int} models.ProyectoAcademicoEnfasis'
+        "400":
+          description: the request contains incorrect syntax
+  /proyecto_academico_enfasis/{id}:
+    get:
+      tags:
+      - proyecto_academico_enfasis
+      description: get ProyectoAcademicoEnfasis by id
+      operationId: ProyectoAcademicoEnfasisController.Get One
+      parameters:
+      - in: path
+        name: id
+        description: The key for staticblock
+        required: true
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.ProyectoAcademicoEnfasis'
+        "404":
+          description: not found resource
+    put:
+      tags:
+      - proyecto_academico_enfasis
+      description: update the ProyectoAcademicoEnfasis
+      operationId: ProyectoAcademicoEnfasisController.Put
+      parameters:
+      - in: path
+        name: id
+        description: The id you want to update
+        required: true
+        type: string
+      - in: body
+        name: body
+        description: body for ProyectoAcademicoEnfasis content
+        required: true
+        schema:
+          $ref: '#/definitions/models.ProyectoAcademicoEnfasis'
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.ProyectoAcademicoEnfasis'
+        "400":
+          description: the request contains incorrect syntax
+    delete:
+      tags:
+      - proyecto_academico_enfasis
+      description: delete the ProyectoAcademicoEnfasis
+      operationId: ProyectoAcademicoEnfasisController.Delete
       parameters:
       - in: path
         name: id
@@ -1274,22 +1274,22 @@ paths:
         "400":
           description: the request contains incorrect syntax
 definitions:
-  50881.<nil>.RegistroCalificadoAcreditacion:
+  19541.<nil>.RegistroCalificadoAcreditacion:
     title: RegistroCalificadoAcreditacion
     type: object
-  50946.<nil>.InstitucionEnfasis:
-    title: InstitucionEnfasis
+  19605.<nil>.ProyectoAcademicoEnfasis:
+    title: ProyectoAcademicoEnfasis
     type: object
-  50987.<nil>.Titulacion:
+  19663.<nil>.Titulacion:
     title: Titulacion
     type: object
-  51134.<nil>.Titulacion:
+  19817.<nil>.Titulacion:
     title: Titulacion
     type: object
-  51290.<nil>.InstitucionEnfasis:
-    title: InstitucionEnfasis
+  19968.<nil>.ProyectoAcademicoEnfasis:
+    title: ProyectoAcademicoEnfasis
     type: object
-  51455.<nil>.RegistroCalificadoAcreditacion:
+  20134.<nil>.RegistroCalificadoAcreditacion:
     title: RegistroCalificadoAcreditacion
     type: object
   models.Enfasis:
@@ -1316,25 +1316,6 @@ definitions:
       NumeroOrden:
         type: number
         format: double
-  models.InstitucionEnfasis:
-    title: InstitucionEnfasis
-    type: object
-    properties:
-      Activo:
-        type: boolean
-      EnfasisId:
-        $ref: '#/definitions/models.Enfasis'
-      FechaCreacion:
-        type: string
-        format: datetime
-      FechaModificacion:
-        type: string
-        format: datetime
-      Id:
-        type: integer
-        format: int64
-      ProyectoAcademicoInstitucionId:
-        $ref: '#/definitions/models.ProyectoAcademicoInstitucion'
   models.Metodologia:
     title: Metodologia
     type: object
@@ -1383,13 +1364,32 @@ definitions:
       NumeroOrden:
         type: number
         format: double
+  models.ProyectoAcademicoEnfasis:
+    title: ProyectoAcademicoEnfasis
+    type: object
+    properties:
+      Activo:
+        type: boolean
+      EnfasisId:
+        $ref: '#/definitions/models.Enfasis'
+      FechaCreacion:
+        type: string
+        format: datetime
+      FechaModificacion:
+        type: string
+        format: datetime
+      Id:
+        type: integer
+        format: int64
+      ProyectoAcademicoInstitucionId:
+        $ref: '#/definitions/models.ProyectoAcademicoInstitucion'
   models.ProyectoAcademicoInstitucion:
     title: ProyectoAcademicoInstitucion
     type: object
     properties:
       Activo:
         type: boolean
-      AnoActoAdministrativoId:
+      AnoActoAdministrativo:
         type: string
       AreaConocimientoId:
         type: integer
@@ -1582,13 +1582,13 @@ definitions:
     type: object
     properties:
       Enfasis:
-        $ref: '#/definitions/50946.<nil>.InstitucionEnfasis'
+        $ref: '#/definitions/19605.<nil>.ProyectoAcademicoEnfasis'
       ProyectoAcademicoInstitucion:
         $ref: '#/definitions/models.ProyectoAcademicoInstitucion'
       Registro:
-        $ref: '#/definitions/50881.<nil>.RegistroCalificadoAcreditacion'
+        $ref: '#/definitions/19541.<nil>.RegistroCalificadoAcreditacion'
       Titulaciones:
-        $ref: '#/definitions/50987.<nil>.Titulacion'
+        $ref: '#/definitions/19663.<nil>.Titulacion'
   models.TrProyectoAcademicoController:
     title: TrProyectoAcademicoController
     type: object
@@ -1597,7 +1597,7 @@ definitions:
     type: object
     properties:
       Enfasis:
-        $ref: '#/definitions/51290.<nil>.InstitucionEnfasis'
+        $ref: '#/definitions/19968.<nil>.ProyectoAcademicoEnfasis'
       ProyectoAcademicoInstitucion:
         $ref: '#/definitions/models.ProyectoAcademicoInstitucion'
   models.TrProyectoAcademicoPutInfoBasica:
@@ -1607,7 +1607,7 @@ definitions:
       ProyectoAcademicoInstitucion:
         $ref: '#/definitions/models.ProyectoAcademicoInstitucion'
       Titulaciones:
-        $ref: '#/definitions/51134.<nil>.Titulacion'
+        $ref: '#/definitions/19817.<nil>.Titulacion'
   models.TrProyectoAcademicoPutRegistro:
     title: TrProyectoAcademicoPutRegistro
     type: object
@@ -1615,7 +1615,7 @@ definitions:
       ProyectoAcademicoInstitucion:
         $ref: '#/definitions/models.ProyectoAcademicoInstitucion'
       Registro:
-        $ref: '#/definitions/51455.<nil>.RegistroCalificadoAcreditacion'
+        $ref: '#/definitions/20134.<nil>.RegistroCalificadoAcreditacion'
 tags:
 - name: metodologia
   description: |
@@ -1626,9 +1626,9 @@ tags:
 - name: enfasis
   description: |
     EnfasisController operations for Enfasis
-- name: institucion_enfasis
+- name: proyecto_academico_enfasis
   description: |
-    InstitucionEnfasisController operations for InstitucionEnfasis
+    ProyectoAcademicoEnfasisController operations for ProyectoAcademicoEnfasis
 - name: tipo_registro
   description: |
     TipoRegistroController operations for TipoRegistro
